[package]
name = "pyxel_arts"
version = "0.1.0"
edition = "2021"

[dependencies]
pyxel-engine = { path = "pyxel/rust/pyxel-engine", version = "2.2.8" }
petgraph = "0.6.5"

[[example]]
name = "sandbox"
path = "src/sandbox.rs"

[[example]]
name = "sinwave"
path = "src/sinwave.rs"

[[example]]
name = "firework"
path = "src/firework.rs"

[[example]]
name = "boid_fish"
path = "src/boid_fish.rs"