[package]
name = "pyxel_arts"
version = "0.1.0"
edition = "2024"

[dependencies]
pyxel-engine = { path = "../pyxel/rust/pyxel-engine" }
petgraph = "0.8.1"

[features]
default=['sdl2']
sdl2 = ["pyxel-engine/sdl2"]
sdl2_bundle = ["pyxel-engine/sdl2_bundle"]

[[example]]
name = "sandbox"
path = "src/sandbox.rs"

[[example]]
name = "sinwave"
path = "src/sinwave.rs"

[[example]]
name = "firework"
path = "src/firework.rs"

[[example]]
name = "many_rect"
path = "src/many_rect.rs"

[[example]]
name = "piano"
path = "src/piano.rs"